force-app/main/default/objects/Contract_Document__c/Contract_Document__c.object-meta.xml
<CustomObject>
    <description>Tracks contracts imported from SharePoint with extracted key terms and dates.</description>
    <label>Contract Document</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>