force-app/main/default/objects/Contract_Document__c/fields/Cancellation_Deadline_Alert__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Deadline_Alert__c</fullName>
    <formula>AND(
    NOT(ISBLANK(Cancellation_Notice_Due_Date__c)),
    Cancellation_Notice_Due_Date__c - TODAY() &lt;= 30,
    Cancellation_Notice_Due_Date__c &gt;= TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Deadline Within 30 Days</label>
    <type>Checkbox</type>
</CustomField>