force-app/main/default/objects/Contract_Document__c/fields/Cancellation_Notice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Notice_Due_Date__c</fullName>
    <label>Cancellation Notice Due Date</label>
    <type>Date</type>
</CustomField>