force-app/main/default/objects/Contract_Document__c/fields/Cancellation_Terms__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Terms__c</fullName>
    <label>Cancellation Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>