force-app/main/default/objects/Contract_Document__c/fields/Data_Privacy_Clauses__c.field-meta.xml
<CustomField>
    <fullName>Data_Privacy_Clauses__c</fullName>
    <label>Data Privacy / Security Clauses</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>