force-app/main/default/objects/Contract_Document__c/fields/Days_Until_Cancellation_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Cancellation_Deadline__c</fullName>
    <formula>Cancellation_Notice_Due_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Cancellation Deadline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>