force-app/main/default/objects/Contract_Document__c/fields/Days_Until_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Expiry__c</fullName>
    <formula>Contract_End_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>