force-app/main/default/objects/Contract_Document__c/fields/Extraction_Status__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Status__c</fullName>
    <label>Extraction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Manual Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>