force-app/main/default/objects/Contract_Document__c/fields/Governing_Law__c.field-meta.xml
<CustomField>
    <fullName>Governing_Law__c</fullName>
    <label>Governing Law / Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>