force-app/main/default/objects/Contract_Document__c/fields/Indemnification__c.field-meta.xml
<CustomField>
    <fullName>Indemnification__c</fullName>
    <label>Indemnification Obligations</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>