force-app/main/default/objects/Contract_Document__c/fields/Internal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Internal_Owner__c</fullName>
    <label>Internal Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>