force-app/main/default/objects/Contract_Document__c/fields/IP_Ownership__c.field-meta.xml
<CustomField>
    <fullName>IP_Ownership__c</fullName>
    <label>IP Ownership</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>