force-app/main/default/objects/Contract_Document__c/fields/Is_Expiring_Soon__c.field-meta.xml
<CustomField>
    <fullName>Is_Expiring_Soon__c</fullName>
    <formula>AND(
    NOT(ISBLANK(Contract_End_Date__c)),
    Contract_End_Date__c - TODAY() &lt;= 90,
    Contract_End_Date__c &gt;= TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiring Within 90 Days</label>
    <type>Checkbox</type>
</CustomField>