force-app/main/default/objects/Contract_Document__c/fields/Liability_Cap__c.field-meta.xml
<CustomField>
    <fullName>Liability_Cap__c</fullName>
    <label>Limitation of Liability Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>