force-app/main/default/objects/Contract_Document__c/fields/Non_Compete_Scope__c.field-meta.xml
<CustomField>
    <fullName>Non_Compete_Scope__c</fullName>
    <label>Non-Compete / Non-Solicitation Scope</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>