force-app/main/default/objects/Contract_Document__c/fields/Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card__c</fullName>
    <label>Rate Card / Hourly Rates</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>