force-app/main/default/objects/Contract_Document__c/fields/Renewal_Decision__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Decision__c</fullName>
    <label>Renewal Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Renegotiate</fullName>
            </value>
            <value>
                <fullName>Terminate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>