force-app/main/default/objects/Contract_Document__c/fields/Renewal_Period__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Period__c</fullName>
    <label>Renewal Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>