force-app/main/default/objects/Contract_Document__c/fields/Risk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Risk_Notes__c</fullName>
    <label>Flags / Risk Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>