force-app/main/default/objects/Contract_Document__c/fields/Services_Summary__c.field-meta.xml
<CustomField>
    <fullName>Services_Summary__c</fullName>
    <label>Services / Deliverables Summary</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>