force-app/main/default/objects/Contract_Document__c/fields/SharePoint_File_Id__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_File_Id__c</fullName>
    <externalId>true</externalId>
    <label>SharePoint File ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>