force-app/main/default/objects/Contract_Document__c/fields/SharePoint_URL__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_URL__c</fullName>
    <label>SharePoint URL</label>
    <type>Url</type>
</CustomField>