force-app/main/default/objects/Contract_Document__c/fields/Signatories__c.field-meta.xml
<CustomField>
    <fullName>Signatories__c</fullName>
    <label>Signatories</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>