force-app/main/default/objects/Contract_Document__c/fields/SLA_Terms__c.field-meta.xml
<CustomField>
    <fullName>SLA_Terms__c</fullName>
    <label>SLA / Performance Metrics</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>