force-app/main/default/objects/Contract_Document__c/fields/Vendor_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact_Email__c</fullName>
    <label>Vendor Contact Email</label>
    <type>Email</type>
</CustomField>