force-app/main/default/objects/Contract_Document__c/fields/Vendor_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact_Name__c</fullName>
    <label>Vendor Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>