force-app/main/default/objects/Contract_Document__c/fields/Vendor_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact_Phone__c</fullName>
    <label>Vendor Contact Phone</label>
    <type>Phone</type>
</CustomField>